# LLM-Notebooks

./: README.md  papers_2025.md
Google-Generative-AI/: NotebookLM_Prompt.md
LLM-Fine-Tuning/: README.md  qlora_gemma.ipynb
LLM-Fine-Tuning/Mlx/: Mlx_tune.ipynb
LLM-Fine-Tuning/Unsloth/: SFT_gpt_oss_(20B)_Fine_tuning.ipynb  UnSlothai.ipynb
LLM-Fine-Tuning/vLLM/: Qwen2.5-1.5B-Instruct.ipynb  Qwen3.6-27B-FP8.ipynb
LLM-Prompt-Engineering/: Structur_prompt.py
LLM-RAG-KG/: KG_LLM.ipynb  KG_NLP.ipynb  tech_acquisitions_kg_visualization.html  tech_acquisitions_knowledge_graph.ttl
LLM-RAG-KG/Neo4j/: README.md  simple_neo4j_kg_demo.ipynb
LLM-RAG/08-DataPipeline/: main.py
LLM-RAG/09-BM25 | FAISS-IVF | HNSW/: 09.ipynb
LLM-RAG/11-HNSW/: 11.ipynb
LLM-RAG/18-Generation/: search-NER-search-domain.py
LLM-RAG/36-vLLM/: 36 模型推理效率低？vLLM+量化技术加速模型推理.ipynb  vLLM.ipynb  vLLM_performance.ipynb
LLM-RAG/37-Model-Heat-Tracker/: ollama_proxy_optimized.py
LLM-RAG/38-LMCache/: README.md  cleanup_cache.py  cleanup_cache.sh  config.example.json  config_template.json  setup_redis.sh  test_cache.py  test_lmcache.py  vLLM_lmcache.ipynb
LLM-RAG/39-K8s/: README.md  agent_configmap.yaml  deployment.sh  (+8 more)
LLM-RAG/49-CrewAI/: 49.ipynb  README.md  agentRAG_utils.py  corrective_rag_agent.py  dynamic_tools_agent.py  heterogeneous_fusion_agent.py  hierarchical_agents.py  multi_agents.py  object_indexed_agent.py  pyproject.toml  single_agent.py  tool_definitions.py  tool_index.py  unified_agent.py
LLM-Serving-Reliability/: README.md  main.py  metrics.py  scheduler.py  worker.py
(+86 files in other folders)
